--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>party</title>
+    <title>党建工作过程考核系统</title>
+    <link rel="stylesheet" href="static/css/style.css">
   </head>
   <body>
-    <div id="app"></div>
-    <!-- built files will be auto injected -->
+  <div id="app"></div>
   </body>
 </html>
